@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2016-05-02:
+- Revoved some areascrolls in displaymenudefault
+
 2016-04-27:
 - Fixed scrollareas in displaymenutimer
 
